--- a/web/index.html
+++ b/web/index.html
@@ -10,5 +10,6 @@
         <p><a href="./html/Cliente/registro.html">Registrar Cliente</a></p>
         <p><a href="./redir.do?url=./jsp/Cuenta/registroCta.jsp">Registrar Cuenta</a></p> 
         <p><a href="./redir.do?url=./jsp/Operacion/registrarOperacion.jsp">Registrar Operacion</a></p> 
+        <p><a href="./redir.do?url=./jsp/Cuenta/vercuentas.jsp">Ver cuentas</a></p> 
     </body>
 </html>
